samples/_failures_safe/1761705170_04d13f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93b1f7cd.c: In function ‘main’:
./samples/SAFE/__tmp_93b1f7cd.c:159:1: error: expected declaration or statement at end of input
  159 | int main() {
      | ^~~
